# SMake

./: .gitignore  CMakeLists.txt  Makefile  a.out  fileops.cpp  fileops.hpp  list_basic.h  main.c  main.cpp  parser.c  parser.cpp  parser.hpp  tokens.h
